Tablet interface implementation works now.  Sorry about the worthless file mode changes, not sure how to reject those easily